# etaWs

./: .gitignore  README.md
exercise1/: .gitignore  Hello.hi  Hello.hs  Qsort.hs  README.md  hello.cabal
exercise1/etaCode/: build.gradle
exercise1/etaCode/src/main/eta/: LifeJ.hs  LifeRules.hs  Main.hs
exercise1/javaCode/: build.gradle
exercise1/javaCode/src/main/resources/: style.css
exercise1c/: Qvsort.hs  README.md  qvsort.cabal
exercise2/: build.gradle  settings.gradle
exercise2/etaCode/: build.gradle
exercise2/etaCode/src/main/eta/: LifeJ.hs  LifeRules.hs
exercise2/javaCode/: build.gradle
exercise2/javaCode/src/jmh/java/pl/setblack/life/jmh/: SimpleTest.java
exercise2/javaCode/src/main/java/pl/setblack/etalife/: LifeTest.java  LifeWindow.java
exercise2/src/main/eta/: Fake.hs
exerciseNull/: Null.hs  build.gradle  recompile.sh
exerciseNull/src/main/java/pl/setblack/experiments/eta/: MaybeProblem.java
exerciseTCO/: Fibo.hs
presentation/: planu.md  todo.md  ws_material.md  ws_material_ex1.md  ws_material_ex2.md
presentation/reveal/: index.html  lconf_part1.html  lconf_part2.html  lconf_part3.html
presentation/reveal/js/: reveal.min.js
presentation/reveal/src/: eta_vdz.md
presentation/reveal/src/lconf/: eta_lconfws.md  lconf_part1.md  lconf_part2.md  lconf_part3.md
