name:                 qvsort-hs
version:              0.1.0.0
author:               jarekratajski
maintainer:           jratajski@gmail.com
build-type:           Simple
cabal-version:        >=1.10

executable hello-hs
  main-is:              Qvsort.hs
  build-depends:       base >= 4.7 && < 5, vector
  hs-source-dirs:       .
  default-language:  Haskell2010

